Fix syntax errors
I noticed and fixed syntax errors in the html (extra unnecessary divs)
and adjusted a padding and margin value within the CSS to accommodate
for layout issues.

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ h3 {
     gap: 48px;
     padding-left: 200px;
     padding-right: 200px;
-    padding-bottom: 100px;
+    padding-bottom: 32px;
 }
 
 .item1, .item2, .item3, .item4 {
